--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "shadcn": "2.4.0-canary.11",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
